--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,54 @@
 /*  your css code here. If applicable */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.hero {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    overflow: hidden;
+}
+
+.hero img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.hero-content {
+    text-align: center;
+    z-index: 1;
+    /* color: #fff; */
+}
+
+.hero-content h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+/* .hero-content p {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+} */
+
+.explore-btn {
+    display: inline-block;
+    padding: 1rem 2rem;
+    background-color: #bd081c;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 25px;
+    transition: background-color 0.3s;
+}
+
+.explore-btn:hover {
+    background-color: #ab0618;
+}
