--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-/*  your css code here. If applicable */
-body {
+ /*  your css code here. If applicable */
+/*body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
@@ -28,7 +28,7 @@ body {
     z-index: 1;
     /* color: #fff; */
 }
-
+/*
 .hero-content h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
@@ -38,7 +38,7 @@ body {
     font-size: 1.5rem;
     margin-bottom: 2rem;
 } */
-
+/*
 .explore-btn {
     display: inline-block;
     padding: 1rem 2rem;
@@ -51,4 +51,26 @@ body {
 
 .explore-btn:hover {
     background-color: #ab0618;
+}
+ */
+
+.hero {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.hero img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.explore-btn {
+	padding: 1rem 2rem;
+	background-color: #ff0000;
+	color: #ffd6d6;
+	border-radius: 25px;
+	text-decoration: none;
+	display: inline-block;
 }
